--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body{
     background-position: center;
 }
 
+
+
 #background-top p {
     width: 70%;
     min-width: 350px;
@@ -46,7 +48,7 @@ nav label, #toggle{
 
 
 
-#links li{ 
+#links li{
     display: inline-block;
     margin: 10px 0px 10px 0px;
 }
@@ -118,7 +120,7 @@ header nav #per a:hover{
 }
 
 article{
-    font-size: 0px;    
+    font-size: 0px;
 }
 
 article > *{
@@ -127,10 +129,10 @@ article > *{
 
 h1, h2, h3, h4, h5, h6{
     font-weight: normal;
-    font-family: 'Arvo', serif; 
+    font-family: 'Arvo', serif;
     margin-bottom: .5em;
     margin-top: 1em;
-    text-transform: capitalize;
+
 }
 
 h1{
@@ -174,6 +176,12 @@ article img{
     font-size: 1.5em;
 }
 
+.greydivpad{
+    background-color: #dddddd;
+    padding: 10px 100px;
+    margin-top: 50px;
+}
+
 footer{
     background-image: url('../images/banner.jpg');
     background-size: cover;
@@ -192,20 +200,54 @@ footer p {
 
 #fixedtop {
     position: fixed;
-    bottom: 20px; 
-    right: 20px; 
+    bottom: 20px;
+    right: 20px;
     z-index: 99;
     text-decoration: none;
-    background-color: #000; 
+    background-color: #000;
     color: white;
     cursor: pointer;
     padding: 15px;
-    border-radius: 10px 10px 10px 10px; 
+    border-radius: 10px 10px 10px 10px;
 }
 
 #espaco{
     margin-top: 250px;
 }
+
+.decimal{
+    list-style:decimal-leading-zero;
+}
+
+.button:link{
+    border: 1px solid #001430;
+    color: #001430;
+    padding: 10px;
+    display: inline-block;
+    font-size: 1.2em;
+    text-decoration: none;
+    transition: .5s;
+}
+
+.button:visited{
+    color: #666666;
+    border: 1px solid #666666;
+}
+
+.button:hover{
+    color: #ffffff;
+    border: 1px solid #001430;
+    background: #001430;
+    padding: 10px 100px;
+
+}
+
+.button:active{
+    color: #ffffff;
+    text-decoration: underline;
+    background: #001430;
+}
+
 
 #steve{
     display: block;
@@ -218,53 +260,149 @@ footer p {
     color: lightgray;
 }
 
-@media (max-width: 800px){
-
-  
-
-    #links{
-        display: none;
-    }
-
-    #toggle:checked ~ #links{
-        display: block;
-    }
-
-    #links li{
-        display: block;
-        margin: 10px 40px 0px 0px;
-
-    }
-
-    nav label, #toggle{
-        display:block;
-        margin-top: 10px;
-    }
-
-   
-    label{
-        padding: 15px;
-        background-color: #8b8c8e;
-        color: white;
-        display: block;
-        text-align: center;
-        font-size: 1.1em;
-        font-weight: bold;
-    }
-
-    #background-top p {
-    width: 70%;
-    min-width: 280px;
-
+.logo{
+    margin: 0 auto 0 auto;
+    max-width: 340px;
+    text-align: center;
 }
 
-    .half{
-        width: 100%;
-        
-    }
- 
-    #espaco{
-    margin-top: 0px;
+.rw-wrapper{
+    width: 100%;
+    position: relative;
+    margin: 50px auto 0 auto;
 }
+.rw-sentence{
+    margin: 0;
+    text-align: left;
+    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+}
+.rw-sentence span{
+    color: #444;
+    font-size: 100%;
+    font-weight: bold;
+}
+.rw-words{
+    display: inline;
+    text-indent: 10px;
+}
+.rw-words-1 span{
+    position: absolute;
+    opacity: 0;
+    overflow: hidden;
+    color: #001430;
+    -webkit-animation: rotateWord 18s linear infinite 0s;
+    -ms-animation: rotateWord 18s linear infinite 0s;
+    animation: rotateWord 18s linear infinite 0s;
+}
+.rw-words-1 span:nth-child(2) {
+    -webkit-animation-delay: 3s;
+    -ms-animation-delay: 3s;
+    animation-delay: 3s;
+    color: #001430;
+}
+.rw-words-1 span:nth-child(3) {
+    -webkit-animation-delay: 6s;
+    -ms-animation-delay: 6s;
+    animation-delay: 6s;
+    color: #001430;
+}
+.rw-words-1 span:nth-child(4) {
+    -webkit-animation-delay: 9s;
+    -ms-animation-delay: 9s;
+    animation-delay: 9s;
+    color: #001430;
+}
+.rw-words-1 span:nth-child(5) {
+    -webkit-animation-delay: 12s;
+    -ms-animation-delay: 12s;
+    animation-delay: 12s;
+    color: #001430;
+}
+.rw-words-1 span:nth-child(6) {
+    -webkit-animation-delay: 15s;
+    -ms-animation-delay: 15s;
+    animation-delay: 15s;
+    color: #001430;
 }
 
+@-webkit-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -webkit-transform: translateY(-30px); }
+    5% { opacity: 1; -webkit-transform: translateY(0px);}
+    17% { opacity: 1; -webkit-transform: translateY(0px); }
+    20% { opacity: 0; -webkit-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-ms-keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -ms-transform: translateY(-30px); }
+    5% { opacity: 1; -ms-transform: translateY(0px);}
+    17% { opacity: 1; -ms-transform: translateY(0px); }
+    20% { opacity: 0; -ms-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@keyframes rotateWord {
+    0% { opacity: 0; }
+    2% { opacity: 0; -webkit-transform: translateY(-30px); transform: translateY(-30px); }
+    5% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px);}
+    17% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px); }
+    20% { opacity: 0; -webkit-transform: translateY(30px); transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+
+
+
+
+
+
+    @media (max-width: 800px){
+
+
+
+        #links{
+            display: none;
+        }
+
+        #toggle:checked ~ #links{
+            display: block;
+        }
+
+        #links li{
+            display: block;
+            margin: 10px 40px 0px 0px;
+
+        }
+
+        nav label, #toggle{
+            display:block;
+            margin-top: 10px;
+        }
+
+
+        label{
+            padding: 15px;
+            background-color: #8b8c8e;
+            color: white;
+            display: block;
+            text-align: center;
+            font-size: 1.1em;
+            font-weight: bold;
+        }
+
+        #background-top p {
+            width: 70%;
+            min-width: 280px;
+
+        }
+
+        .half{
+            width: 100%;
+
+        }
+
+        #espaco{
+            margin-top: 0px;
+        }
+    }
