--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,19 @@ footer p {
     @media (max-width: 800px){
 
 
+        .greydivpad{
+            background-color: #dddddd;
+            padding: 10px 20px;
+            margin-top: 30px;
+        }
+
+        .greydivpad h2{
+            font-size: 1.75em;
+        }
+
+        .rw-wrapper h2{
+            font-size: 1.1em;
+        }
 
         #links{
             display: none;
