--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,20 @@
 html {
     box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
-body{
+body {
     padding: 0% 10px;
     font-family: 'Open Sans', sans-serif;
     margin-top: 20px;
 }
 
-#background-top{
+#background-top {
     background-image: url('../images/banner.jpg');
     color: #ffffff;
     text-shadow: 2px 2px 2px black;
@@ -34,48 +37,52 @@ body{
     min-width: 350px;
 }
 
-input#toggle{
+input#toggle {
     display: none;
 }
 
-nav label, #toggle{
+nav label,
+#toggle {
     display: none;
 }
 
-#toggle{
+#toggle {
     display: none;
 }
 
 
 
-#links li{
+#links li {
     display: inline-block;
     margin: 10px 0px 10px 0px;
 }
 
-main, header, .centered{
+main,
+header,
+.centered {
     max-width: 1213px;
     margin-left: auto;
     margin-right: auto;
 }
 
 
-nav ul{
+nav ul {
     text-align: center;
 }
 
-.col{
+.col {
     display: inline-block;
     vertical-align: top;
     margin: .5%;
     padding: 10px;
 }
 
-.half{
+.half {
     width: 49%;
 }
 
-header nav a:link, header nav a:visited{
+header nav a:link,
+header nav a:visited {
     padding: 15px;
     display: inline-block;
     font-weight: bold;
@@ -86,48 +93,53 @@ header nav a:link, header nav a:visited{
     text-align: center;
 }
 
-header nav a:hover{
+header nav a:hover {
     color: white;
     transition: .5s;
 }
 
-header nav #hom a:hover{
+header nav #hom a:hover {
     background: #8b8c8e;
 }
 
-header nav #pro a:hover{
+header nav #pro a:hover {
     background: #959492;
 }
 
-header nav #ali a:hover{
+header nav #ali a:hover {
     background: #959490;
 }
 
-header nav #con a:hover{
+header nav #con a:hover {
     background: #95928d;
 }
 
-header nav #typ a:hover{
+header nav #typ a:hover {
     background: #918c86;
 }
 
-header nav #rep a:hover{
+header nav #rep a:hover {
     background: #8e857c;
 }
 
-header nav #per a:hover{
+header nav #per a:hover {
     background: #857b71;
 }
 
-article{
+article {
     font-size: 0px;
 }
 
-article > *{
+article > * {
     font-size: 1rem;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: normal;
     font-family: 'Arvo', serif;
     margin-bottom: .5em;
@@ -135,54 +147,54 @@ h1, h2, h3, h4, h5, h6{
 
 }
 
-h1{
+h1 {
     font-size: 4em;
 }
 
-h2{
+h2 {
     font-size: 3em;
 }
 
-h3{
+h3 {
     font-size: 1.5em;
 }
 
-h4{
+h4 {
     font-size: 1em;
 }
 
-p{
+p {
     font-size: 1.25em;
     margin: 10px 0px;
     line-height: 1.3em;
 }
 
-article{
+article {
     margin: 5px 0px;
     padding: 20px;
 }
 
-article img{
+article img {
     width: 100%;
     max-width: 800px;
 }
 
-.greydiv{
+.greydiv {
     background-color: #dddddd;
 }
 
-.subtitle{
+.subtitle {
     font-weight: 300;
     font-size: 1.5em;
 }
 
-.greydivpad{
+.greydivpad {
     background-color: #dddddd;
     padding: 10px 100px;
     margin-top: 50px;
 }
 
-footer{
+footer {
     background-image: url('../images/banner.jpg');
     background-size: cover;
     background-position: center;
@@ -211,15 +223,15 @@ footer p {
     border-radius: 10px 10px 10px 10px;
 }
 
-#espaco{
+#espaco {
     margin-top: 250px;
 }
 
-.decimal{
-    list-style:decimal-leading-zero;
+.decimal {
+    list-style: decimal-leading-zero;
 }
 
-.button:link{
+.button:link {
     border: 1px solid #001430;
     color: #001430;
     padding: 10px;
@@ -229,12 +241,12 @@ footer p {
     transition: .5s;
 }
 
-.button:visited{
+.button:visited {
     color: #666666;
     border: 1px solid #666666;
 }
 
-.button:hover{
+.button:hover {
     color: #ffffff;
     border: 1px solid #001430;
     background: #001430;
@@ -242,51 +254,55 @@ footer p {
 
 }
 
-.button:active{
+.button:active {
     color: #ffffff;
     text-decoration: underline;
     background: #001430;
 }
 
 
-#steve{
+#steve {
     display: block;
     margin: 0 auto 0 auto;
     max-width: 200px
 }
 
-#mail{
+#mail {
     text-decoration: none;
     color: lightgray;
 }
 
-.logo{
+.logo {
     margin: 0 auto 0 auto;
     max-width: 340px;
     text-align: center;
 }
 
 
-.rw-wrapper{
+.rw-wrapper {
     width: 100%;
     position: relative;
     margin: 50px auto 0 auto;
 }
-.rw-sentence{
+
+.rw-sentence {
     margin: 0;
     text-align: left;
-    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
 }
-.rw-sentence span{
+
+.rw-sentence span {
     color: #444;
     font-size: 100%;
     font-weight: bold;
 }
-.rw-words{
+
+.rw-words {
     display: inline;
     text-indent: 1px;
 }
-.rw-words-1 span{
+
+.rw-words-1 span {
     position: absolute;
     opacity: 0;
     overflow: hidden;
@@ -295,30 +311,35 @@ footer p {
     -ms-animation: rotateWord 18s linear infinite 0s;
     animation: rotateWord 18s linear infinite 0s;
 }
+
 .rw-words-1 span:nth-child(2) {
     -webkit-animation-delay: 3s;
     -ms-animation-delay: 3s;
     animation-delay: 3s;
     color: #001430;
 }
+
 .rw-words-1 span:nth-child(3) {
     -webkit-animation-delay: 6s;
     -ms-animation-delay: 6s;
     animation-delay: 6s;
     color: #001430;
 }
+
 .rw-words-1 span:nth-child(4) {
     -webkit-animation-delay: 9s;
     -ms-animation-delay: 9s;
     animation-delay: 9s;
     color: #001430;
 }
+
 .rw-words-1 span:nth-child(5) {
     -webkit-animation-delay: 12s;
     -ms-animation-delay: 12s;
     animation-delay: 12s;
     color: #001430;
 }
+
 .rw-words-1 span:nth-child(6) {
     -webkit-animation-delay: 15s;
     -ms-animation-delay: 15s;
@@ -327,76 +348,95 @@ footer p {
 }
 
 @-webkit-keyframes rotateWord {
-    0% { opacity: 0; }
-    2% { opacity: 0; -webkit-transform: translateY(-30px); }
-    5% { opacity: 1; -webkit-transform: translateY(0px);}
-    17% { opacity: 1; -webkit-transform: translateY(0px); }
-    20% { opacity: 0; -webkit-transform: translateY(30px); }
-    80% { opacity: 0; }
-    100% { opacity: 0; }
+    0% {
+        opacity: 0;
+    }
+    2% {
+        opacity: 0;
+        -webkit-transform: translateY(-30px);
+    }
+    5% {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+    20% {
+        opacity: 0;
+        -webkit-transform: translateY(30px);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 
 
-    @media (max-width: 800px){
+@media (max-width: 800px) {
 
 
-        .greydivpad{
-            background-color: #dddddd;
-            padding: 10px 20px;
-            margin-top: 30px;
-        }
-
-        .greydivpad h2{
-            font-size: 1.75em;
-        }
-
-        .rw-wrapper h2{
-            font-size: 1.1em;
-        }
-
-        #links{
-            display: none;
-        }
-
-        #toggle:checked ~ #links{
-            display: block;
-        }
-
-        #links li{
-            display: block;
-            margin: 10px 40px 0px 0px;
-
-        }
-
-        nav label, #toggle{
-            display:block;
-            margin-top: 10px;
-        }
-
-
-        label{
-            padding: 15px;
-            background-color: #8b8c8e;
-            color: white;
-            display: block;
-            text-align: center;
-            font-size: 1.1em;
-            font-weight: bold;
-        }
-
-        #background-top p {
-            width: 70%;
-            min-width: 280px;
-
-        }
-
-        .half{
-            width: 100%;
-
-        }
-
-        #espaco{
-            margin-top: 0px;
-        }
+    .greydivpad {
+        background-color: #dddddd;
+        padding: 10px 20px;
+        margin-top: 30px;
     }
+
+    .greydivpad h2 {
+        font-size: 1.75em;
+    }
+
+    .rw-wrapper h2 {
+        font-size: 1.1em;
+    }
+
+    #links {
+        display: none;
+    }
+
+    #toggle:checked ~ #links {
+        display: block;
+    }
+
+    #links li {
+        display: block;
+        margin: 10px 40px 0px 0px;
+
+    }
+
+    nav label,
+    #toggle {
+        display: block;
+        margin-top: 10px;
+    }
+
+
+    label {
+        padding: 15px;
+        background-color: #8b8c8e;
+        color: white;
+        display: block;
+        text-align: center;
+        font-size: 1.1em;
+        font-weight: bold;
+    }
+
+    #background-top p {
+        width: 70%;
+        min-width: 280px;
+
+    }
+
+    .half {
+        width: 100%;
+
+    }
+
+    #espaco {
+        margin-top: 0px;
+    }
+}
