--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,11 @@ footer p {
     color: #001430;
 }
 
+.decimal li{
+    margin: 10px 0px 10px 0px;
+}
+
+
 @-webkit-keyframes rotateWord {
     0% {
         opacity: 0;
