--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -61,11 +61,15 @@ display: inline-block;
     padding-top:20px;
 }
 
+nav ul{
+    padding-left: 10px;
+}
+
 nav ul li {
     display: inline-block;
     list-style: none;
     height: auto;
-    padding: 5px 0px 0px 15px;
+    padding: 0px 10px 0px 0px;
     text-transform: uppercase;
 
 }
