--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -51,32 +51,45 @@ h6 {
 
 /* Mobile rules*/
 
-.site-title {
-    font-size: 2em;
-    font-weight: 600;
-    display: inline-block;
+header, nav ul, h1, #locationInfo{
+    display: flex;
 }
 
-.logo,
-.site-title {
-    display: inline-block;
+
+header{
+    background-color: skyblue;
+    justify-content: flex-start;
 }
+
 
 .logo {
-    font-size: 4em;
-    padding-top: 20px;
+    font-size: 2em;
+    padding-top: 5px;
 }
 
+
+.site-title {
+    font-size: 2em;
+    font-weight: 300;
+}
+
+h1{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+
 nav ul {
-    padding-left: 10px;
+    padding-left: 1px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    overflow-x: auto;
 }
 
 nav ul li {
-    display: inline-block;
     list-style: none;
     height: auto;
-    padding: 0px 10px 0px 20px;
-    text-transform: uppercase;
+    padding: 3px;
 }
 
 #hourly ul{
@@ -87,8 +100,7 @@ nav {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: #d8d8d8;
-
+    background-color: skyblue;
 }
 
 nav a:link {
@@ -162,6 +174,15 @@ nav a:active {
     padding: 0px 0px 20px 20px;
     border: 1px solid;
     border-radius: 15px;
+}
+
+#hourly ul {
+    display: flex;
+    overflow-x: scroll;
+}
+
+#hourly li{
+    padding: 10px;
 }
 
 footer {
