--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -78,8 +78,17 @@ h1{
     margin-bottom: 0px;
 }
 
+nav {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: skyblue;
+}
+
 
 nav ul {
+
     padding-left: 1px;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -96,12 +105,6 @@ nav ul li {
     list-style: none;
 }
 
-nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: skyblue;
-}
 
 nav a:link {
     text-decoration: none;
@@ -179,10 +182,14 @@ nav a:active {
 #hourly ul {
     display: flex;
     overflow-x: scroll;
+    background-color: gray;
+    color: white;
+    padding-left: 0px;
 }
 
 #hourly li{
     padding: 10px;
+    flex: 0 0 auto;
 }
 
 footer {
