--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -1,10 +1,8 @@
 /*This is my screen css file*/
-
 /*@imports comes first.*/
 
 @import url('https://fonts.googleapis.com/css?family=Sansita');
 @import url('normalize.css');
-
 
 * {
     box-sizing: border-box;
@@ -57,7 +55,7 @@ header, nav ul, h1, #locationInfo{
 
 
 header{
-    background-color: skyblue;
+    background-color: #0e89d5;
     justify-content: flex-start;
 }
 
@@ -76,6 +74,14 @@ header{
 h1{
     margin-top: 0px;
     margin-bottom: 0px;
+    padding-left: 5px;
+}
+
+#locationInfo {
+    width: 100%;
+    display: flex;
+    font-size: .70em;
+    padding-left: 5px;
 }
 
 nav {
@@ -83,7 +89,7 @@ nav {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: skyblue;
+    background-color: #0e89d5;
 }
 
 
@@ -131,6 +137,7 @@ nav a:active {
 }
 
 #smallConditions {
+    display: flex;
     background-color: rgba(200, 200, 200, .8);
     margin: 10px;
     padding: 0px 0px 0px 20px;
@@ -138,46 +145,73 @@ nav a:active {
     border-radius: 15px;
 }
 
+#temps h2{
+    display: none;
+}
+
 #temps {
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    width: 60%;
 }
 
 #temps h3 {
-    font-size: 60px;
+    font-size: 4em;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
 #hot {
     color: red;
-    display: inline-block;
+    padding-left: 15px;
     margin: 0px;
 }
 
 #cold {
     color: blue;
-    display: inline-block;
-    padding-left: 40px;
+    padding-left: 25px;
     margin: 0px;
 }
 
+#north{
+    text-align: center;
+    margin-right: 25%;
+}
+
+#dial img {
+    align-self: center;
+    width: 75%;
+}
 
 #wind {
-    display: inline-block;
-    margin-left: 30px;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+#wind p {
+    margin: 0px;
 }
 
 #wind h2 {
-    margin-bottom: 55px;
+   display: none;
 }
 
 #video {
     background-color: rgba(200, 200, 200, .8);
     margin: 10px;
-    padding: 0px 0px 20px 20px;
     border: 1px solid;
     border-radius: 15px;
 }
+
+#video h3{
+    display: none;
+}
+
+#video img {
+    display: block;
+    margin: 10px auto;
+    }
 
 #hourly ul {
     display: flex;
@@ -194,4 +228,5 @@ nav a:active {
 
 footer {
     margin-bottom: 2em;
+    background-color: #0e89d5;
 }
