--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -145,10 +145,6 @@ nav a:active {
     border-radius: 15px;
 }
 
-#temps h2{
-    display: none;
-}
-
 #temps {
     display: flex;
     flex-wrap: wrap;
@@ -193,7 +189,7 @@ nav a:active {
     margin: 0px;
 }
 
-#wind h2 {
+h2 {
    display: none;
 }
 
@@ -204,9 +200,6 @@ nav a:active {
     border-radius: 15px;
 }
 
-#video h3{
-    display: none;
-}
 
 #video img {
     display: block;
@@ -233,4 +226,150 @@ nav a:active {
 footer {
     margin-bottom: 2em;
     background-color: #0e89d5;
+}
+
+/* Large Screens: 750px or 37.5em*/
+
+@media screen and (min-width: 37.5em) {
+
+    body>div {
+        max-width: 1100px;
+        margin: 0 auto;
+    }
+
+    h2 {
+        display: block;
+        margin: .25em 0;
+    }
+
+    .site-title {
+        font-size: 3em;
+    }
+
+    .logo {
+        font-size: 3em;
+        padding: 5px;
+    }
+
+    nav {
+        margin: -2px 0px 0px 0px;
+        position: relative;
+        font-size: 2vw;
+        width: auto;
+    }
+
+    nav>ul>li{
+        padding: 0px 0px 0px 80px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    #locationInfo {
+        font-size: 2vw;
+    }
+
+    #smallConditions #wind{
+        margin-left: 80px;
+    }
+
+    #curWeather {
+        display: flex;
+        justify-content: space-evenly;
+        padding: 30px 0;
+    }
+
+    #smallConditions {
+        background-color: transparent;
+        margin: 0;
+        border: none;
+    }
+
+    #wind, #temps, #video {
+        background-color: rgba(200, 200, 200, .6);
+        margin: 0;
+        border: 1px solid;
+        border-radius: 15px;
+        padding: .1em;
+        width: 250px;
+        height: 270px;
+        display: flex;
+    }
+
+    #smallConditions #temps h2{
+      padding-left: 40px;
+    }
+
+    #tempRightNow {
+        padding-left: 2.7vw;
+    }
+
+    #hot {
+        padding-left: 4.65vw;
+    }
+
+
+    #feels {
+        padding-left: 3.8vw;
+    }
+
+    #north{
+        margin-top: -10px;
+        padding-left: 60px;
+    }
+
+    #dial img{
+        display: none;
+    }
+
+    #dial {
+        height: 150px;
+        width: 150px;
+        background: no-repeat center/85% url('/weather/images/wind-pointer.png');
+        margin: -.6em auto 0;
+    }
+
+    #speed {
+        position: absolute;
+        padding-top: 110px;
+        padding-left: 90px;
+    }
+
+    #wind{
+        text-align: center;
+    }
+
+    #video {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #video img {
+        width: 200px;
+    }
+
+    #hourly {
+        background-color: rgba(200, 200, 200, .6);
+        margin: .2em auto;
+        border: 1px solid;
+        border-radius: 15px;
+        align-items: center;
+        margin: .50em 0;
+        height: 90px;
+        overflow: hidden;
+
+    }
+
+    #hourly > h2 {
+        font-size: 20px;
+        margin-left: 5px;
+    }
+
+    .linha {
+        border: 1px solid #000;
+        margin-top: 15px;
+        margin-bottom: 7px;
+    }
+
 }
