--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -276,7 +276,7 @@ footer {
 
     #curWeather {
         display: flex;
-        justify-content: space-evenly;
+        justify-content:space-around;
         padding: 30px 0;
     }
 
