--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -55,6 +55,11 @@ h6 {
     display: block;
 }
 
+#status{
+    text-align: center;
+    font-size: 2vw;
+}
+
 /* Mobile rules*/
 
 header, nav ul, h1, #locationInfo{
@@ -215,7 +220,7 @@ nav a:active {
 }
 
 #temps h3 {
-    font-size: 4em;
+    font-size: 3em;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -461,5 +466,9 @@ footer {
         margin-top: 15px;
         margin-bottom: 7px;
     }
+
+    #temps h3 {
+        font-size: 4em;
+        }
 
 }
