--- a/weather/css/screen.css
+++ b/weather/css/screen.css
@@ -140,11 +140,10 @@ nav {
 
 
 nav ul {
-
-    padding-left: 1px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    overflow-x: auto;
+    display: flex;
+    justify-content: space-around;
+    margin: 5px;
+    padding: 0px;
 }
 
 nav ul li {
@@ -205,8 +204,9 @@ nav a:active {
 
 #smallConditions {
     display: flex;
+    justify-content: space-around;
     background-color: rgba(200, 200, 200, .8);
-    margin: 10px;
+    margin: 0.5em;
     padding: 0px 0px 0px 20px;
     border: 1px solid;
     border-radius: 15px;
@@ -215,14 +215,19 @@ nav a:active {
 #temps {
     display: flex;
     flex-wrap: wrap;
-    align-content: space-around;
-    width: 60%;
+    align-items: center;
+    margin: 5px auto;
+    max-width: 170px;
 }
 
 #temps h3 {
     font-size: 3em;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+#tempRightNow {
+    padding-left: 4vw;
 }
 
 #hot {
@@ -237,32 +242,36 @@ nav a:active {
     margin: 0px;
 }
 
-#north{
-    text-align: center;
-    margin-right: 25%;
+
+#feels{
+    margin: 0;
+    padding-left: 15px;
 }
 
 #dial {
     height: 150px;
     width: 150px;
     background: no-repeat center/85% url('/weather/images/wind-pointer.png');
-    z-index: 100;
-    margin: -.6em auto 0;
-}
 
-/*#dial img {
-    align-self: center;
-    width: 75%;
-}*/
+}
 
 #wind {
     display: flex;
     flex-flow: column nowrap;
+    text-align: center;
+    margin: 10px auto;
 }
 
 #wind p {
     margin: 0px;
 }
+
+#speed {
+    position: absolute;
+    padding-top: 80px;
+    padding-left: 50px;
+}
+
 
 h2 {
    display: none;
@@ -303,9 +312,9 @@ footer {
     background-color: #0e89d5;
 }
 
-/* Large Screens: 750px or 37.5em*/
+/* Large Screens: 850px or 42.5em*/
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 850px) {
 
     body>div {
         max-width: 1100px;
@@ -327,14 +336,10 @@ footer {
     }
 
     nav {
-        margin: -2px 0px 0px 0px;
         position: relative;
-        font-size: 1.8vw;
+        font-size: 1.6vw;
+        padding: 10px 0px;
         width: auto;
-    }
-
-    nav>ul>li{
-        padding: 0px 0px 0px 80px;
     }
 
     h1 {
@@ -351,8 +356,9 @@ footer {
 
     #curWeather {
         display: flex;
-        justify-content:space-around;
-        padding: 30px 0;
+        justify-content: center;
+        padding: 1em 0;
+        width: auto;
     }
 
     .clear{
@@ -378,10 +384,11 @@ footer {
     #smallConditions {
         background-color: transparent;
         margin: 0;
+        padding: 0;
         border: none;
     }
 
-    #wind, #temps, #video {
+   #temps{
         background-color: rgba(200, 200, 200, .6);
         margin: 0;
         border: 1px solid;
@@ -392,12 +399,17 @@ footer {
         display: flex;
     }
 
+    #temps {
+        max-width: 100%;
+    }
+
     #smallConditions #temps h2{
       padding-left: 40px;
     }
 
     #tempRightNow {
-        padding-left: 1.0vw;
+        padding-left: 3vw;
+        padding-bottom: 25px;
     }
 
     #hot {
@@ -407,11 +419,6 @@ footer {
 
     #feels {
         padding-left: 3.8vw;
-    }
-
-    #north{
-        margin-top: -10px;
-        padding-left: 60px;
     }
 
     #dial img{
@@ -425,19 +432,44 @@ footer {
         margin: -.6em auto 0;
     }
 
+
     #speed {
-        position: absolute;
-        padding-top: 110px;
-        padding-left: 90px;
+        padding-top: 120px;
+        padding-left: 95px;
     }
+
+    #wind{
+        background-color: rgba(200, 200, 200, .6);
+        margin: 0;
+        border: 1px solid;
+        border-radius: 15px;
+        padding: .1em;
+        width: 250px;
+        height: 270px;
+        display: flex;
+    }
+
 
     #wind{
         text-align: center;
     }
 
+    #video{
+        background-color: rgba(200, 200, 200, .6);
+        margin: 0;
+        border: 1px solid;
+        border-radius: 15px;
+        padding: .1em;
+        width: 250px;
+        height: 270px;
+        display: flex;
+    }
+
     #video {
         flex-direction: column;
         align-items: center;
+        margin: 0 0 0 80px;
+        min-width: 200px;
     }
 
     #video img {
